# synology-site-deployer

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  RESUME.md  TODO.md  migration-validation-report-followup.md  migration-validation-report.md  pyproject.toml
docs/: api-only-noindex-routes.md  laravel-scaffold-options.md  lightsail-migration-mvp.md  lightsail-ssh-access-recovery.md  remote-nas-access.md  secrets-management.md  traefik-letsencrypt.md  veloso-dev-ssh-access-setup.md
tests/: test_backup_plan_command.py  test_bootstrap_mariadb_command.py  test_bootstrap_n8n_command.py  test_bootstrap_supabase_command.py  test_bootstrap_umami_command.py  test_bootstrap_uptime_kuma_command.py  test_bootstrap_vaultwarden_command.py  test_check_nas.py  test_cli.py  test_cloudflare_api.py  test_cloudflare_domain_split.py  test_cloudflare_manual_instructions.py  test_cloudflare_route_command.py  test_compose_generation.py  test_config.py  test_configure_tailscale_command.py  test_create_deployment.py  test_database_naming.py  test_deploy_command.py  test_docker_remote.py  test_doctor_command.py  test_ensure_network_command.py  test_fastapi_scaffold.py  test_flask_scaffold.py  test_godaddy_api.py  test_godaddy_dns_command.py  test_godaddy_nameserver_orchestration_warning.py  test_godaddy_nameservers_command.py  test_godaddy_workspace.py  test_health_command.py  test_laravel_scaffold.py  test_lightsail_discovery.py  test_lightsail_existing_deployment.py  test_lightsail_source.py  test_list_sites.py  test_migrate_from_lightsail_command.py  test_naming.py  (+26 more)
(+103 files in other folders)
