[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "synology-site-deployer"
version = "0.1.0"
description = "A local CLI for deploying containerized Flask sites to Synology NAS hosts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Jinja2>=3.1",
  "Paramiko>=3.4",
  "PyYAML>=6.0",
  "Rich>=13.7",
  "Typer>=0.12",
  "python-dotenv>=1.0",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
synology-site = "synology_site.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
synology_site = ["scaffold/templates/*.j2"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["src"]
